# optee_standalone

./: .gitmodules  CMakeLists.txt  Makefile  Makefile.cmake  README.md
